--- a/src/public/index.html
+++ b/src/public/index.html
@@ -497,6 +497,72 @@
               </div>
             </div>
 
+            <!-- Courses Page -->
+            <div id="courses-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <div>
+                  <button
+                    type="button"
+                    class="btn btn-primary me-2"
+                    id="add-course-btn"
+                  >
+                    <i class="fas fa-plus"></i> Add New Course
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-success"
+                    id="import-courses-btn"
+                  >
+                    <i class="fas fa-file-import"></i> Import Courses
+                  </button>
+                </div>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="course-search-input"
+                    placeholder="Search courses..."
+                  />
+                  <select class="form-select me-2" id="course-type-filter">
+                    <option value="all">All Types</option>
+                    <option value="T">Theory (T)</option>
+                    <option value="P">Practical (P)</option>
+                    <option value="TEL">Theory + Lab (TEL)</option>
+                    <option value="PRJ">Project (PRJ)</option>
+                    <option value="NC">Non-Credit (NC)</option>
+                  </select>
+                  <select class="form-select" id="course-status-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Code</th>
+                      <th>Course</th>
+                      <th>T-P-C</th>
+                      <th>Type</th>
+                      <th>Programs</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="courses-table">
+                    <tr>
+                      <td colspan="7" class="text-center">
+                        Loading courses...
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
             <!-- Other content pages will be added similarly -->
           </div>
         </main>
@@ -1439,6 +1505,365 @@
       </div>
     </div>
 
+    <!-- Course Modal -->
+    <div
+      class="modal fade"
+      id="courseModal"
+      tabindex="-1"
+      aria-labelledby="courseModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="courseModalLabel">Add New Course</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="course-form">
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="course-owner-field" class="form-label"
+                    >Course Owner *</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="course-owner-field"
+                    maxlength="20"
+                    required
+                  />
+                  <div class="form-text">
+                    Department/School that owns this course.
+                  </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="course-code-field" class="form-label"
+                    >Course Code *</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="course-code-field"
+                    maxlength="10"
+                    required
+                  />
+                  <div class="form-text">
+                    Unique course code (e.g., MAT1001).
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="course-name-field" class="form-label"
+                  >Course Name *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="course-name-field"
+                  maxlength="150"
+                  required
+                />
+                <div class="form-text">Full name of the course.</div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 mb-3">
+                  <label for="theory-field" class="form-label">Theory *</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="theory-field"
+                    min="0"
+                    max="10"
+                    required
+                  />
+                  <div class="form-text">Theory hours per week (0-10).</div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="practical-field" class="form-label"
+                    >Practical *</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="practical-field"
+                    min="0"
+                    max="10"
+                    required
+                  />
+                  <div class="form-text">Practical hours per week (0-10).</div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="credits-field" class="form-label"
+                    >Credits *</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="credits-field"
+                    min="0"
+                    max="10"
+                    required
+                  />
+                  <div class="form-text">
+                    Total credits for this course (0-10).
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="course-type-field" class="form-label"
+                    >Course Type *</label
+                  >
+                  <select class="form-select" id="course-type-field" required>
+                    <option value="">Select type</option>
+                    <option value="T">Theory (T)</option>
+                    <option value="P">Practical (P)</option>
+                    <option value="TEL">Theory + Lab (TEL)</option>
+                    <option value="PRJ">Project (PRJ)</option>
+                    <option value="NC">Non-Credit (NC)</option>
+                  </select>
+                  <div class="form-text">
+                    Type of course (Theory, Practical, etc.).
+                  </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="curriculum-version-field" class="form-label"
+                    >Curriculum Version</label
+                  >
+                  <input
+                    type="number"
+                    step="0.01"
+                    class="form-control"
+                    id="curriculum-version-field"
+                  />
+                  <div class="form-text">
+                    Version of curriculum (e.g., 1.00, 2.00).
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="prerequisite-field" class="form-label"
+                  >Prerequisite</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="prerequisite-field"
+                  maxlength="100"
+                />
+                <div class="form-text">
+                  Courses that must be completed before taking this course.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="antirequisite-field" class="form-label"
+                  >Antirequisite</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="antirequisite-field"
+                  maxlength="100"
+                />
+                <div class="form-text">
+                  Courses that cannot be taken along with this course.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="course-equivalence-field" class="form-label"
+                  >Course Equivalence</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="course-equivalence-field"
+                  maxlength="100"
+                />
+                <div class="form-text">
+                  Equivalent courses from other programs/universities.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="programs-offered-to-field" class="form-label"
+                  >Programs Offered To *</label
+                >
+                <textarea
+                  class="form-control"
+                  id="programs-offered-to-field"
+                  rows="3"
+                  maxlength="800"
+                  required
+                ></textarea>
+                <div class="form-text">
+                  List of programs this course is offered to.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="remarks-field" class="form-label">Remarks</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="remarks-field"
+                  maxlength="100"
+                />
+                <div class="form-text">
+                  Additional information about the course.
+                </div>
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="course-is-active-field"
+                  checked
+                />
+                <label class="form-check-label" for="course-is-active-field">
+                  Active
+                </label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-course-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Course Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="courseDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Course</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this course? This action cannot be
+              undone.
+            </p>
+            <p><strong>Code:</strong> <span id="course-delete-code"></span></p>
+            <p><strong>Name:</strong> <span id="course-delete-name"></span></p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-course-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Import Courses Modal -->
+    <div
+      class="modal fade"
+      id="importModal"
+      tabindex="-1"
+      aria-labelledby="importModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="importModalLabel">Import Courses</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Upload an Excel file (.xlsx or .xls) containing course data. The
+              file should have the following columns:
+            </p>
+            <ul>
+              <li>course_owner</li>
+              <li>course_code</li>
+              <li>course_name</li>
+              <li>theory</li>
+              <li>practical</li>
+              <li>credits</li>
+              <li>course_type</li>
+              <li>prerequisite (optional)</li>
+              <li>antirequisite (optional)</li>
+              <li>course_equivalence (optional)</li>
+              <li>programs_offered_to</li>
+              <li>curriculum_version (optional)</li>
+              <li>remarks (optional)</li>
+            </ul>
+            <div class="mb-3">
+              <label for="file-input" class="form-label"
+                >Select Excel File</label
+              >
+              <input
+                class="form-control"
+                type="file"
+                id="file-input"
+                accept=".xlsx,.xls"
+              />
+              <div id="file-info" class="form-text"></div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="upload-btn"
+              disabled
+            >
+              Upload
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -1463,5 +1888,6 @@
     <script src="js/programs.js"></script>
     <script src="js/venues.js"></script>
     <script src="js/faculty.js"></script>
+    <script src="js/courses.js"></script>
   </body>
 </html>
