--- a/src/public/index.html
+++ b/src/public/index.html
@@ -78,6 +78,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="students-link">
+                  <i class="fas fa-user-graduate me-2"></i>
+                  Students
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="logout-link">
                   <i class="fas fa-sign-out-alt me-2"></i>
                   Logout
@@ -556,6 +562,72 @@
                     <tr>
                       <td colspan="7" class="text-center">
                         Loading courses...
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <!-- Students Page -->
+            <div id="students-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <div>
+                  <button
+                    type="button"
+                    class="btn btn-primary me-2"
+                    id="add-student-btn"
+                  >
+                    <i class="fas fa-plus"></i> Add New Student
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-success"
+                    id="import-students-btn"
+                  >
+                    <i class="fas fa-file-import"></i> Import Students
+                  </button>
+                </div>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="student-search-input"
+                    placeholder="Search students..."
+                  />
+                  <select class="form-select me-2" id="student-program-filter">
+                    <option value="all">All Programs</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                  <select class="form-select me-2" id="student-school-filter">
+                    <option value="all">All Schools</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                  <select class="form-select" id="student-year-filter">
+                    <option value="all">All Years</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Enrollment No.</th>
+                      <th>User ID</th>
+                      <th>Student Name</th>
+                      <th>Program</th>
+                      <th>School</th>
+                      <th>Year Admitted</th>
+                      <th>Email</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="students-table">
+                    <tr>
+                      <td colspan="8" class="text-center">
+                        Loading students...
                       </td>
                     </tr>
                   </tbody>
@@ -1863,6 +1935,251 @@
         </div>
       </div>
     </div>
+    <!-- Student Modal -->
+    <div
+      class="modal fade"
+      id="studentModal"
+      tabindex="-1"
+      aria-labelledby="studentModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="studentModalLabel">Add New Student</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="student-form">
+              <div class="mb-3">
+                <label for="student-enrollment-field" class="form-label"
+                  >Enrollment No. *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="student-enrollment-field"
+                  maxlength="20"
+                  required
+                />
+                <div class="form-text">
+                  Unique enrollment/registration number (e.g., BTCS2301)
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="student-userid-field" class="form-label"
+                  >User ID *</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="student-userid-field"
+                  required
+                />
+                <div class="form-text">Unique integer ID for the student</div>
+              </div>
+              <div class="mb-3">
+                <label for="student-name-field" class="form-label"
+                  >Student Name *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="student-name-field"
+                  maxlength="100"
+                  required
+                />
+                <div class="form-text">Full name of the student</div>
+              </div>
+              <div class="mb-3">
+                <label for="student-program-field" class="form-label"
+                  >Program *</label
+                >
+                <select class="form-select" id="student-program-field" required>
+                  <option value="">Select a program</option>
+                  <!-- Will be populated dynamically -->
+                </select>
+                <div class="form-text">Program the student is enrolled in</div>
+              </div>
+              <div class="mb-3">
+                <label for="student-school-field" class="form-label"
+                  >School *</label
+                >
+                <select class="form-select" id="student-school-field" required>
+                  <option value="">Select a school</option>
+                  <!-- Will be populated dynamically -->
+                </select>
+                <div class="form-text">School the student belongs to</div>
+              </div>
+              <div class="mb-3">
+                <label for="student-year-field" class="form-label"
+                  >Year Admitted *</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="student-year-field"
+                  min="2000"
+                  max="2099"
+                  required
+                />
+                <div class="form-text">
+                  Year the student was admitted (e.g., 2023)
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="student-email-field" class="form-label"
+                  >Email</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="student-email-field"
+                  maxlength="100"
+                />
+                <div class="form-text">Student's email address (optional)</div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-student-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Import Students Modal -->
+    <div
+      class="modal fade"
+      id="importStudentsModal"
+      tabindex="-1"
+      aria-labelledby="importStudentsModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="importStudentsModalLabel">
+              Import Students
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Upload an Excel file (.xlsx or .xls) containing student data. The
+              file should have the following columns:
+            </p>
+            <ul>
+              <li>enrollment_no (required)</li>
+              <li>user_id (required)</li>
+              <li>student_name (required)</li>
+              <li>program_name (required)</li>
+              <li>school_name (required)</li>
+              <li>year_admitted (required)</li>
+              <li>email_id (optional)</li>
+            </ul>
+            <div class="mb-3">
+              <label for="student-file-input" class="form-label"
+                >Select Excel File</label
+              >
+              <input
+                class="form-control"
+                type="file"
+                id="student-file-input"
+                accept=".xlsx,.xls"
+              />
+              <div id="student-file-info" class="form-text"></div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="upload-students-btn"
+              disabled
+            >
+              Upload
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Student Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="studentDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Student</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this student? This action cannot
+              be undone.
+            </p>
+            <p>
+              <strong>Enrollment No:</strong>
+              <span id="student-delete-enrollment"></span>
+            </p>
+            <p>
+              <strong>Name:</strong>
+              <span id="student-delete-name"></span>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-student-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
@@ -1889,5 +2206,6 @@
     <script src="js/venues.js"></script>
     <script src="js/faculty.js"></script>
     <script src="js/courses.js"></script>
+    <script src="js/students.js"></script>
   </body>
 </html>
